# nets

./: .gitignore  LICENSE  README.md  meson.build
include/: collection_to_socket.hpp  nets.hpp  sender.hpp  server.hpp  tcp_client.hpp  tcp_remote.hpp  tcp_sender.hpp  tcp_server.hpp  types.hpp
src/: meson.build  tcp_client.cpp  tcp_remote.cpp  tcp_server.cpp
subprojects/: collection.wrap
tests/: meson.build  mynet.hpp  stackoverflow_client.cpp  stackoverflow_server.cpp  tcp_client.cpp  tcp_server.cpp
